Fix visibilty of map's attribution

--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,12 @@ code {
   margin: 0;
 }
 
+.leaflet-control-attribution {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+}
+
 .dark-theme .leaflet-tile-pane {
   -webkit-filter: invert(1) grayscale(1);
   filter: invert(1) grayscale(1);
